[package]
name = "fast_paths"
version = "0.1.1-SNAPSHOT"
authors = ["easbar <easbar.mail@posteo.net>"]
edition = "2018"
description = "Fast shortest path calculations on directed graphs made possible by pre-processing the graph using Contraction Hierarchies"
repository = "https://github.com/easbar/fast_paths"
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "easbar/fast_paths", branch = "master" }

[dependencies]
bincode = "1.1.2"
serde = { version = "1.0", features =["derive"] }
log = "0.4"
rand = "0.6"
priority-queue = "0.6.0"

[dev-dependencies]
stopwatch = "0.0.7"

[features] 
default = ["invalid_usize"]

# The value for INVALID_{NODE,EDGE} & WEIGHT_MAX will be `usize::max_value()`
invalid_usize = []

# The value for INVALID_{NODE,EDGE} & WEIGHT_MAX will be `u32::max_value()`
invalid_u32 = []

# The value for INVALID_{NODE,EDGE} & WEIGHT_MAX will be `u64::max_value()`
invalid_u64 = []